# pathtracing

./: .gitignore  Cargo.toml  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
src/: bvh.rs  camera.rs  config.rs  main.rs  material.rs  ppm.rs  primitive.rs  rtx_traits.rs  scene.rs  scenes.rs  stl.rs  utils.rs
src/accelerators/: mod.rs
src/camera/: mod.rs
src/cli/: mod.rs
src/film/: mod.rs
src/geometry/: bounds.rs  bounds2.rs  bounds3.rs  mod.rs  normal3.rs  point.rs  point2.rs  point3.rs  ray.rs  utils.rs  vector.rs  vector2.rs  vector3.rs
src/integrator/: mod.rs  sampler_integrator.rs  whitted_integrator.rs
src/integrators/: mod.rs
src/math/: matrix.rs
src/objects/: mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
src/output/: filmic.rs  mod.rs  openexr.rs  reinhard_devlin.rs
src/prng/: halton.rs  mod.rs  mt19937.rs
src/rtcore/: mod.rs  shadow.rs  weekend.rs
src/sampler/: mod.rs
src/spectrum/: mod.rs  rgb.rs
src/threading/: mod.rs
