[package]
name = "pathtracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder="1.4.3"
float-cmp="0.9.0"
pbr = "1.0.4"
# coz = "0.1"
exr = "1.4.1"

[profile.dev]
debug = true
opt-level = 3

[profile.release]
debug = true
opt-level = 3
lto = true
